# tanamesa-data-pipeline

./: .env  README.md  config.py  db_ingestion.py  docker-compose.yml  docker-entrypoint.sh  dockerfile  pyproject.toml
api/: app.py  db_ingestion.py  db_settings.py  deps.py
api/repos/: main_repo.py
api/routes/: main_router.py
api/schemas/: application_schema.py  programReview_schema.py  restaurants_schema.py  socioechonomics_schema.py
api/services/: main_service.py
data/: README.md
db/sql/: 01_survey_administration_views.sql  views.sql
notebooks/: .env  survey.ipynb
src/: .env  kpis.py
