[project]
name = "ta-na-mesa-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "carlos-dani-dev",email = "carlos.rocha@ufpi.edu.br"}
]
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "ipykernel (>=7.3.0,<8.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn (>=0.51.0,<0.52.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
